--- a/WebApiWithDI/appsettings.Development.json
+++ b/WebApiWithDI/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "SqlConnectionString": "Server=localhost,1434;Initial Catalog=TodoList;User Id=sa;Password=Altran2019!;Integrated Security=false;"
+    "SqlConnectionString": "Server=localhost;Initial Catalog=TodoList;User Id=sa;Password=Altran2019!;Integrated Security=false;"
   }
 }
