Add selecion Database

--- a/WebApiWithDI/appsettings.Development.json
+++ b/WebApiWithDI/appsettings.Development.json
@@ -6,7 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionStrings": {
-    "SqlConnectionString": "Server=localhost;Initial Catalog=TodoList;User Id=sa;Password=Altran2019!;Integrated Security=false;"
-  }
-}
+  "AllowedHosts": "*"
+} 
