--- a/WebApiWithDI/appsettings.Production.json
+++ b/WebApiWithDI/appsettings.Production.json
@@ -1,13 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlConnectionString": "Server=localhost;Initial Catalog=TodoList;User Id=sa;Password=Altran2019!;Integrated Security=false;"
-  }
+    "DefaultConnection": "Server=.,1433;Initial Catalog=TodoList;User Id=sa;Password=Altran2019!;"
+  }  
 }
