--- a/WebApiWithDI/appsettings.json
+++ b/WebApiWithDI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.,1433;Initial Catalog=TodoList;User Id=sa;Password=Altran2019!;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,8 +9,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "SqlConnectionString": "Server=localhost;Initial Catalog=TodoList;User Id=sa;Password=Altran2019!;Integrated Security=false;"
-  }
+  "AllowedHosts": "*"
 }
