--- a/WebApiWithDI/Properties/launchSettings.json
+++ b/WebApiWithDI/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/TodoItemsSqlServer",
+      "launchUrl": "api/TodoItemSqlServers",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "WebApiWithDI": {
